Post Headers Width and Alignment Fixes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -394,6 +394,7 @@ div.excerpt-link {
     word-spacing: 5px;
     margin: 0 0 22px 0;
     color: #fff;
+    width: 100%;
 }
 
 h1 > a.external {
@@ -625,12 +626,12 @@ a.external:after {
     }
     
     .post-link h2 {
-        line-height: 37px;
+        line-height: 32px;
     }
     
     a.post-link {
-        font-size: 32px;
-        line-height: 37px;
+        font-size: 28px;
+        line-height: 32px;
         word-spacing: 3px;
     }
     
@@ -639,7 +640,7 @@ a.external:after {
     }
     
     .post-title h1 {
-   	    width: auto;
+   	    width: 100%;
   	    font-size: 20px;
   	    line-height: 22px; 
         position: relative;
@@ -649,7 +650,7 @@ a.external:after {
 
 @media all and (min-width: $on-mobile) and (max-width: 700px) {
     .post-title h1 {
-   	    width: auto;
+   	    width: 100%;
   	    font-size: 26px;
   	    line-height: 29px; 
         position: absolute;
